--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerface",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "private": true,
   "license": "UNLICENSED",
   "devDependencies": {
@@ -10,7 +10,7 @@
   "fitbit": {
     "appUUID": "a96debcd-4091-4ea1-b09b-96f49c63f50b",
     "appType": "clockface",
-    "appDisplayName": "Slidelike Presentation",
+    "appDisplayName": "Time Presentation",
     "iconFile": "resources/icon.png",
     "wipeColor": "#ffffff",
     "requestedPermissions": [
